# ai-literacy-app

./: .gitignore  CLAUDE.md  vercel.json
backend/: config.py  main.py  pyproject.toml
backend/routers/: prompt.py
backend/services/: claude_service.py
frontend/: index.html  package.json  pnpm-lock.yaml
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: ErrorBoundary.tsx
frontend/src/components/home/: FeaturedModules.tsx  HeroSection.tsx  RoleSelector.tsx  ValueProposition.tsx
frontend/src/components/lab/: FrameworkPicker.tsx  PromptEditor.tsx  PromptScorer.tsx  ResponseViewer.tsx  TemplateSelector.tsx
frontend/src/components/layout/: Footer.tsx  Navbar.tsx  RootLayout.tsx  Sidebar.tsx
frontend/src/components/learn/: ContentRenderer.tsx  ModuleCard.tsx  ProgressBar.tsx
frontend/src/data/: modules.ts  prompt-frameworks.ts  prompt-templates.ts  resources.ts  types.ts  user-roles.ts
frontend/src/hooks/: usePromptLab.ts  useRole.ts
frontend/src/lib/: api.ts  constants.ts
frontend/src/pages/: Home.tsx  Lab.tsx  Learn.tsx  Module.tsx  NotFound.tsx  Profile.tsx  Resources.tsx
frontend/src/store/: progressStore.ts  userStore.ts
